Add internship experience for web developer role
Added internship experience details for a web developer role.

--- a/index.html
+++ b/index.html
@@ -187,6 +187,28 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>WEB DEVELOPER(INTERNSHIP)</h4>
+              <h5>Sep 2025 - Present</h5>
+              <p><em>Civiconnect, Ontario, Canada</em></p>
+              <ul>
+                <li>
+                  Worked on a full-stack web application built with Next.js, React, Redux, and Strapi, handling both the frontend and backend parts of the project.
+                </li>
+                <li>
+                  Created a reusable set of UI components and managed application state with Redux to keep the code clean, fast, and easy to maintain.
+                </li>
+                <li>
+                  Designed responsive and accessible pages that worked smoothly across all devices and followed good UI/UX and SEO practices.
+                </li>
+                <li>
+                  Integrated backend APIs, improved page performance, and fixed issues found during development or testing.
+                </li>
+                <li>
+                  Worked closely with the team in an Agile setup to plan tasks, share updates, and deliver features on time.
+                </li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>WEB DEVELOPER</h4>
               <h5>Sep 2024 - Feb 2025</h5>
               <p><em>Digiloop Inc., Alberta, Canada</em></p>
