Update internship experience

--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>WEB DEVELOPER(INTERNSHIP)</h4>
-              <h5>Sep 2025 - Present</h5>
+              <h4>WEB DEVELOPER (INTERNSHIP)</h4>
+              <h5>Sep 2025 - Dec 2025</h5>
               <p><em>Civiconnect, Ontario, Canada</em></p>
               <ul>
                 <li>
