Update education dates and program descriptions

--- a/index.html
+++ b/index.html
@@ -173,13 +173,22 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>ADVANCED DIPLOMA IN SOFTWARE DEVELOPMENT</h4>
-              <h5>Jan 2024 - Dec 2026</h5>
+              <h5>May 2025 - Dec 2026</h5>
               <p><em>Mohawk College, Hamilton, ON</em></p>
-              <p>Mohawk College’s Computer Systems Technology – Software Development (559) is a three-year advanced
+              <p>Mohawk College’s Computer Systems Technology – Software Development is a three-year advanced
                 diploma program that teaches programming, web and mobile app development, and databases. It includes
                 co-op terms for hands-on industry experience, preparing students for careers in software
                 development,
                 analysis, and testing.</p>
+            </div>
+            <div class="resume-item">
+              <h4>COMPUTER SYSTEMS TECHNICIAN - SOFTWARE SUPPORT</h4>
+              <h5>Jan 2024 - Apr 2025</h5>
+              <p><em>Mohawk College, Hamilton, ON</em></p>
+              <p>Mohawk College’s Computer Systems Technician – Software Support is a two-year diploma program focused on computer hardware, 
+                operating systems, networking, and technical support skills. The program emphasizes troubleshooting, system installation, 
+                and user support, preparing students for entry-level roles in IT support, help desk services, and system maintenance across 
+                a variety of industries.</p>
             </div><!-- End Resume Item -->
 
           </div>
